# iCODES

./: .gitignore  Makefile  README.md  concatenated.txt  icodes.py  llm_interface.py  pyproject.toml  settings.py
icds/: data.py  git_helpers.py  llm_interface.py  models.py  settings.py
