[tool.poetry]
name = "icodes"
version = "0.1.0"
description = "Intelligent Commit Ontology Distiller and Enhanced Search"
authors = ["Jordan Dimov <jdimov@a115.co.uk>"]
license = "CC0-1.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.12.0"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
ruff = "^0.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
